Spacing fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,8 +6,15 @@ body
     font-family: Arial, Helvetica, sans-serif;
     padding: 64px;
 
-    max-width: 100%;
+    margin: 0;
 }
+
+header, footer, main
+{
+    margin: 0;
+    padding: 8px;
+}
+
 header
 {
     display: block;
@@ -19,12 +26,22 @@ main
 footer
 {
     display: block;
+
     text-align: center;
 }
+
+
+
 a
 {
     text-decoration: none;
 }
+
+p
+{
+    margin: 0;
+}
+
 .headerText
 {
     font-size: 16px;
